fix: aside bar collapse all the way (#112)
* preliminary

* Ch

* fix

* tests

* Ch

* Ch

---------

--- a/addon/styles/design-system.css
+++ b/addon/styles/design-system.css
@@ -72,12 +72,14 @@ body > main {
 /* collapsed */
 
 aside.collapsed {
-  width: inherit !important;
+  width: 0;
   min-width: inherit !important;
+  padding: 0 !important;
 }
 
 aside.collapsed .tds-aside-title,
-aside.collapsed .nav-link span {
+aside.collapsed .nav-link span,
+aside.collapsed div button {
   display: none;
 }
 
